--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "traitor-uploader",
-  "module": "index.ts",
+  "module": "Source/index.ts",
   "type": "module",
   "private": true,
   "devDependencies": {
@@ -13,5 +13,9 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "@elysiajs/bearer": "^1.4.3",
+    "elysia": "^1.4.22"
   }
 }
