--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@elysiajs/bearer": "^1.4.3",
+    "@elysiajs/eden": "^1.4.8",
     "@elysiajs/static": "^1.4.7",
     "elysia": "^1.4.22"
   }
