--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "@elysiajs/eden": "^1.4.8",
     "drizzle-orm": "^1.0.0-beta.15-859cf75",
     "elysia": "^1.4.22",
-    "nanoid": "^5.1.6"
+    "ulid": "^3.0.2"
   }
 }
